// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/component/NumberText renders correctly 1`] = `
<div
  className="sc-bdVaJa sc-htpNat jBGZHO"
  fontFamily="body"
>
  1
</div>
`;

exports[`components/component/NumberText renders correctly with decimales 1`] = `
<div
  className="sc-bdVaJa sc-htpNat jBGZHO"
  fontFamily="body"
>
  1.3333333
</div>
`;
